--- a/drivers/net/ethernet/msm/Kconfig
+++ b/drivers/net/ethernet/msm/Kconfig
@@ -28,7 +28,7 @@ endif # NET_VENDOR_MSM
 
 config MSM_RMNET_BAM
 	bool "RMNET BAM Driver"
-	depends on (MSM_BAM_DMUX && NET_SCHED && NET_SCH_HTB && NET_SCH_PRIO && NET_CLS_FW)
+	depends on (MSM_BAM_DMUX && NET_SCHED && NET_SCH_FQ && NET_SCH_PRIO && NET_CLS_FW)
 	default n
 	help
 	  Implements RMNET over BAM interface.
