--- a/arch/arm/configs/msm8916_sec_defconfig
+++ b/arch/arm/configs/msm8916_sec_defconfig
@@ -1,6 +1,6 @@
 # Support LZ4 KERNEL Compress
 # CONFIG_KERNEL_LZ4 is not set
-CONFIG_LOCALVERSION="-ZXKernel-3.0-Gabboxl"
+CONFIG_LOCALVERSION="-FastKernel-Ksawlii"
 CONFIG_DECOMPRESS_LZ4=y
 CONFIG_KERNEL_XZ=y
 CONFIG_DECOMPRESS_XZ=y
